--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
             <td>
                 <div class="card">
                 <span class="card__title">Michael</span>
-                <p class="card__content">Has been responsible for designing the can, along with coordinating the other team members by acting as the link for physical design (AKA dealt with Danny B)</p>
+                <p class="card__content">Has been responsible for designing the can, along with coordinating the other team members by acting as the link for physical design</p>
                 </div>
             </td>
         </tr>
