--- a/can.html
+++ b/can.html
@@ -21,7 +21,7 @@
     <div class='band_1'>
     <table>
         <tr>
-            <td style="padding: 5vw;"><h1>Robust Design</h1><p>Our Can is a fat cow which is in a 4 part wave function due to two beam splitters working in colaberation with big math operatives</p></td>
+            <td style="padding: 5vw;"><h1>Robust Design</h1><p>Our can uses 70% gyroid infill PLA to ensure that it is up to the stress put on it</p></td>
             <td style="float: right;"><img src="Icons/can 2 part.png"></td>
         </tr>
     </table>
