--- a/team.html
+++ b/team.html
@@ -26,8 +26,8 @@
             </td>
             <td>
                 <div class="card">
-                    <span class="card__title">Gen.G Vector</span>
-                    <p class="card__content">Our resident valorant pro, he commits crimes with both magnitude and direction! He is a unrivalled Sova main who has never gone negative because he 'chooses' to play in iron 1.</p>
+                    <span class="card__title">Josh</span>
+                    <p class="card__content">Designed and tested the circuit and electronic components</p>
                 </div>
             </td>
             <td>
