--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <h1>Get in touch</h1>
         <table><tr><td><input placeholder="Email..." class="short" id="returnemail"></td> <td><input placeholder="Subject..." class="short" id="subject"></td></tr></table>
         <textarea rows='10' prompt="Message..." class="long" id='content'></textarea>
-        <button class="submitbutton" id='sendemail' onclick="email()">Submit</button>
+        <button class="submitbutton" id='sendemail' onclick="email()">Unfortunately due to GitHub hosting unable to make post requests, this function is currently unavailable</button>
         </div> 
     <div class='card' style="position: relative; top: 3vw;">
     <h1 style="position: relative;  top: 10vw;">Or message us on:</h1>
